--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/breeze": "^2.1",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "realrashid/sweet-alert": "^7.2",
         "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
